adjust for johns changes

--- a/lang/de.lang
+++ b/lang/de.lang
@@ -1,3 +1,4 @@
+[categories]
 module.category.chat.name=Chat
 module.category.combat.name=Kampf
 module.category.miscellaneous.name=Verschiedenes
@@ -10,6 +11,27 @@ module.category.external.name=Extern
 
 
 
+[panels]
+ui.panel.external.name=External
+ui.panel.chat.name=Chat
+ui.panel.combat.name=Combat
+ui.panel.world.name=World
+ui.panel.player.name=Player
+ui.panel.movement.name=Movement
+ui.panel.miscellaneous.name=Miscellaneous
+ui.panel.render.name=Render
+ui.panel.client.name=Client
+
+
+
+[screens]
+ui.screen.clickgui.name=ClickGui
+ui.screen.hud_editor.name=Hud Editor
+ui.screen.windows.name=Windows
+
+
+
+[modules]
 feature.module.airplace.name=LuftPlatzieren
 feature.module.airplace.description=Platziere Blöcke in der Luft
 feature.module.airplace.setting.grim.name=Grim
@@ -2691,6 +2713,17 @@ feature.module.lagger.setting.mode.name=Modus
 feature.module.lagger.setting.mode.description=
 feature.module.lagger.setting.packets.name=Packets
 feature.module.lagger.setting.packets.description=
+
+feature.module.language.name=Language
+
+
+feature.module.language.description=Configure the language of RusherHack's interface
+
+
+feature.module.language.setting.language.name=Language
+
+
+feature.module.language.setting.language.description=
 
 feature.module.liquidinteract.name=LiquidInteract
 feature.module.liquidinteract.description=Place blocks on top of water
